ajustando width e height

--- a/index.html
+++ b/index.html
@@ -1,3 +1,79 @@
-<script type="text/javascript">
-  document.write(unescape('%20%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%70%74%2D%62%72%22%3E%0A%3C%68%65%61%64%3E%0A%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%20%20%3C%6D%65%74%61%20%68%74%74%70%2D%65%71%75%69%76%3D%22%58%2D%55%41%2D%43%6F%6D%70%61%74%69%62%6C%65%22%20%63%6F%6E%74%65%6E%74%3D%22%49%45%3D%65%64%67%65%22%3E%0A%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%0A%20%20%3C%74%69%74%6C%65%3E%52%6F%63%6B%65%74%4E%65%77%73%20%7C%20%49%6E%73%63%72%65%76%61%2D%73%65%3C%2F%74%69%74%6C%65%3E%0A%20%20%3C%21%2D%2D%20%53%54%59%4C%45%53%20%2D%2D%3E%0A%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%68%72%65%66%3D%22%2E%2F%73%74%79%6C%65%73%2F%73%74%79%6C%65%2E%63%73%73%22%3E%0A%20%20%3C%21%2D%2D%20%46%4F%4E%54%53%20%53%50%41%52%54%41%4E%20%2D%2D%3E%0A%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%70%72%65%63%6F%6E%6E%65%63%74%22%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%66%6F%6E%74%73%2E%67%6F%6F%67%6C%65%61%70%69%73%2E%63%6F%6D%22%3E%0A%3C%6C%69%6E%6B%20%72%65%6C%3D%22%70%72%65%63%6F%6E%6E%65%63%74%22%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%66%6F%6E%74%73%2E%67%73%74%61%74%69%63%2E%63%6F%6D%22%20%63%72%6F%73%73%6F%72%69%67%69%6E%3E%0A%3C%6C%69%6E%6B%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%66%6F%6E%74%73%2E%67%6F%6F%67%6C%65%61%70%69%73%2E%63%6F%6D%2F%63%73%73%32%3F%66%61%6D%69%6C%79%3D%53%70%61%72%74%61%6E%3A%77%67%68%74%40%34%30%30%3B%35%30%30%3B%37%30%30%26%64%69%73%70%6C%61%79%3D%73%77%61%70%22%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%3E%0A%3C%21%2D%2D%20%46%4F%4E%54%53%20%57%4F%52%4B%20%53%41%4E%53%20%2D%2D%3E%0A%3C%6C%69%6E%6B%20%72%65%6C%3D%22%70%72%65%63%6F%6E%6E%65%63%74%22%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%66%6F%6E%74%73%2E%67%6F%6F%67%6C%65%61%70%69%73%2E%63%6F%6D%22%3E%0A%3C%6C%69%6E%6B%20%72%65%6C%3D%22%70%72%65%63%6F%6E%6E%65%63%74%22%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%66%6F%6E%74%73%2E%67%73%74%61%74%69%63%2E%63%6F%6D%22%20%63%72%6F%73%73%6F%72%69%67%69%6E%3E%0A%3C%6C%69%6E%6B%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%66%6F%6E%74%73%2E%67%6F%6F%67%6C%65%61%70%69%73%2E%63%6F%6D%2F%63%73%73%32%3F%66%61%6D%69%6C%79%3D%57%6F%72%6B%2B%53%61%6E%73%3A%77%67%68%74%40%34%30%30%3B%35%30%30%3B%37%30%30%26%64%69%73%70%6C%61%79%3D%73%77%61%70%22%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%0A%20%20%3C%6D%61%69%6E%3E%0A%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%63%6F%6E%74%61%69%6E%65%72%22%3E%0A%20%20%20%20%20%20%3C%69%6D%67%20%63%6C%61%73%73%3D%22%6C%6F%67%6F%22%20%73%72%63%3D%22%2E%2F%61%73%73%65%74%73%2F%6C%6F%67%6F%2E%73%76%67%22%20%61%6C%74%3D%22%4C%6F%67%6F%20%64%61%20%52%6F%63%6B%65%74%4E%65%77%73%2E%20%50%65%72%73%6F%6E%61%67%65%6D%20%66%65%6D%69%6E%69%6E%6F%20%63%6F%6D%20%6D%61%63%61%63%E3%6F%20%62%72%61%6E%63%6F%20%65%20%63%61%62%65%E7%61%73%20%65%20%6D%E3%6F%73%20%63%6F%72%20%6C%69%6C%E1%73%20%73%65%67%75%72%61%6E%64%6F%20%75%6D%61%20%66%6F%6C%68%61%20%64%65%20%6E%6F%74%ED%63%69%61%20%64%69%67%69%74%61%6C%2E%22%20%74%69%74%6C%65%3D%22%52%6F%63%6B%65%74%4E%65%77%73%22%3E%0A%0A%20%20%20%20%20%20%3C%68%31%3E%61%74%75%61%6C%69%7A%65%20%69%64%65%69%61%73%20%65%20%69%6E%66%6F%72%6D%61%E7%F5%65%73%20%65%6D%20%35%20%6D%69%6E%75%74%6F%73%2E%3C%2F%68%31%3E%0A%20%20%20%20%20%20%3C%68%32%3E%74%75%64%6F%20%71%75%65%20%76%6F%63%EA%20%70%72%65%63%69%73%61%20%73%61%62%65%72%20%70%61%72%61%20%63%6F%6D%65%E7%61%72%20%73%65%75%20%64%69%61%20%62%65%6D%20%65%20%69%6E%66%6F%72%6D%61%64%6F%3C%2F%68%32%3E%0A%20%20%20%20%20%20%3C%70%3E%6E%6F%74%69%63%69%61%73%20%73%6F%62%72%65%20%6F%20%75%6E%69%76%65%72%73%6F%20%52%6F%63%6B%65%74%73%65%61%74%2C%20%65%20%74%75%64%6F%20%6F%20%71%75%65%20%70%72%65%63%69%73%61%20%70%61%72%61%20%63%6F%6D%65%E7%61%72%20%6F%20%64%69%61%20%6D%65%6C%68%6F%72%2E%0A%20%20%20%20%20%20%20%20%70%65%72%66%65%69%74%6F%20%70%61%72%61%20%73%65%20%70%72%65%70%61%72%61%72%20%70%61%72%61%20%63%6F%64%61%72%20%15%3C%2F%70%3E%0A%0A%20%20%20%20%20%20%20%20%3C%66%6F%72%6D%20%61%63%74%69%6F%6E%3D%22%23%22%20%6D%65%74%68%6F%64%3D%22%23%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%6C%61%62%65%6C%20%66%6F%72%3D%22%63%2D%65%6D%61%69%6C%22%20%63%6C%61%73%73%3D%22%69%6E%70%75%74%2D%65%6D%61%69%6C%22%3E%49%6E%73%69%72%61%20%73%65%75%20%65%2D%6D%61%69%6C%3A%3C%2F%6C%61%62%65%6C%3E%0A%0A%20%20%20%20%20%20%20%20%20%20%3C%64%69%76%20%69%64%3D%22%69%6E%70%75%74%5F%62%75%74%74%6F%6E%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%72%65%71%75%69%72%65%64%20%74%79%70%65%3D%22%65%6D%61%69%6C%22%20%6E%61%6D%65%3D%22%74%2D%65%6D%61%69%6C%22%20%69%64%3D%22%63%2D%65%6D%61%69%6C%22%20%74%69%74%6C%65%3D%22%49%6E%73%69%72%61%20%73%65%75%20%6D%65%6C%68%6F%72%20%65%2D%6D%61%69%6C%22%20%70%6C%61%63%65%68%6F%6C%64%65%72%3D%22%6F%69%40%72%6F%63%6B%65%74%73%65%61%74%2E%63%6F%6D%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%62%75%74%74%6F%6E%20%74%79%70%65%3D%22%73%75%62%6D%69%74%22%20%6E%61%6D%65%3D%22%74%2D%73%75%62%6D%69%74%22%20%69%64%3D%22%63%2D%73%75%62%6D%69%74%22%20%74%69%74%6C%65%3D%22%45%6E%76%69%61%72%22%3E%3C%69%6D%67%20%73%72%63%3D%22%2E%2F%61%73%73%65%74%73%2F%73%65%6E%64%2E%73%76%67%22%20%61%6C%74%3D%22%42%6F%74%E3%6F%20%64%65%20%73%75%62%6D%69%73%73%E3%6F%20%64%6F%20%66%6F%72%6D%75%6C%E1%72%69%6F%22%3E%3C%2F%62%75%74%74%6F%6E%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%0A%20%20%20%20%20%20%20%20%20%20%3C%6C%61%62%65%6C%20%63%6C%61%73%73%3D%22%73%72%2D%6F%6E%6C%79%22%20%66%6F%72%3D%22%63%2D%73%75%62%6D%69%74%22%3E%3C%2F%6C%61%62%65%6C%3E%0A%20%20%20%20%20%20%20%20%3C%2F%66%6F%72%6D%3E%0A%0A%20%20%20%20%20%20%20%20%3C%61%20%63%6C%61%73%73%3D%22%6C%65%72%22%20%68%72%65%66%3D%22%23%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%70%20%63%6C%61%73%73%3D%22%6C%65%72%22%20%74%69%74%6C%65%3D%22%49%72%20%70%61%72%61%20%61%20%70%E1%67%69%6E%61%20%64%65%20%6E%6F%74%ED%63%69%61%73%22%3E%64%65%69%78%65%2D%6D%65%20%6C%65%72%20%70%72%69%6D%65%69%72%6F%3C%2F%70%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%69%6D%67%20%73%72%63%3D%22%2E%2F%61%73%73%65%74%73%2F%61%72%72%6F%77%2D%72%69%67%68%74%2E%73%76%67%22%20%61%6C%74%3D%22%53%65%74%61%20%64%65%20%64%69%72%65%E7%E3%6F%20%70%61%72%61%20%6F%20%42%6C%6F%67%22%3E%0A%20%20%20%20%20%20%20%20%3C%2F%61%3E%0A%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%3C%2F%6D%61%69%6E%3E%0A%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%62%61%63%6B%67%72%6F%75%6E%64%22%3E%3C%2F%64%69%76%3E%0A%0A%20%20%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'));
-  </script>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RocketNews</title>
+    <!-- STYLES -->
+    <link rel="stylesheet" href="./styles/style.css" />
+    <!-- FONTS SPARTAN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- FONTS WORK SANS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <main>
+      <div class="container">
+        <img
+          class="logo"
+          src="./assets/logo.svg"
+          alt="Logo da RocketNews. Personagem feminino com macacão branco e cabeças e mãos cor lilás segurando uma folha de notícia digital."
+          title="RocketNews"
+        />
+
+        <h1>atualize ideias e informações em 5 minutos.</h1>
+        <h2>
+          tudo que você precisa saber para começar seu dia bem e informado
+        </h2>
+        <p>
+          noticias sobre o universo Rocketseat, e tudo o que precisa para
+          começar o dia melhor. perfeito para se preparar para codar ☕
+        </p>
+
+        <form action="#" method="#">
+          <label for="c-email" class="input-email">Insira seu e-mail:</label>
+
+          <div id="input_button">
+            <input
+              required
+              type="email"
+              name="t-email"
+              id="c-email"
+              title="Insira seu melhor e-mail"
+              placeholder="oi@rocketseat.com"
+            />
+            <button type="submit" name="t-submit" id="c-submit" title="Enviar">
+              <img
+                src="./assets/send.svg"
+                alt="Botão de Submissão do formulário"
+              />
+            </button>
+          </div>
+        </form>
+        <label class="sr-only" for="c-submit"></label>
+
+        <a class="ler" href="#">
+          <p class="ler" title="Ir para a página de notícias">
+            deixe-me ler primeiro
+          </p>
+          <img
+            src="./assets/arrow-right.svg"
+            alt="Seta de direção para o Blog"
+          />
+        </a>
+      </div>
+    </main>
+    <div class="background"></div>
+  </body>
+</html>
